--- a/Starter_Files/ETL_Mini_Project_BHurtado_JHutton_AMagallan_CValenciano.ipynb
+++ b/Starter_Files/ETL_Mini_Project_BHurtado_JHutton_AMagallan_CValenciano.ipynb
@@ -233,7 +233,8 @@
     }
    ],
    "source": [
-    "# Get a brief summary of the crowdfunding_info DataFrame.\n"
+    "# Get a brief summary of the crowdfunding_info DataFrame.\n",
+    "crowdfunding_info_df.info()"
    ]
   },
   {
@@ -275,7 +276,8 @@
     }
    ],
    "source": [
-    "# Get the crowdfunding_info_df columns.\n"
+    "# Get the crowdfunding_info_df columns.\n",
+    "crowdfunding_info_df.columns"
    ]
   },
   {
@@ -464,7 +466,9 @@
     }
    ],
    "source": [
-    "# Assign the category and subcategory values to category and subcategory columns.\n"
+    "# Assign the category and subcategory values to category and subcategory columns.\n",
+    "crowdfunding_info_df[['category','subcategory']] = crowdfunding_info_df [\"category & sub-category\"].str.split('/' , expand=True)\n",
+    "crowdfunding_info_df.head()"
    ]
   },
   {
@@ -488,7 +492,8 @@
    ],
    "source": [
     "# Get the unique categories and subcategories in separate lists.\n",
-    "\n",
+    "categories = crowdfunding_info_df['category'].unique()\n",
+    "subcategories = crowdfunding_info_df['subcategory'].unique()\n",
     "\n",
     "print(categories)\n",
     "print(subcategories)"
@@ -553,9 +558,10 @@
    ],
    "source": [
     "# Use a list comprehension to add \"cat\" to each category_id. \n",
+    "cat_ids = [f\"cat{category_id}\" for category_id in category_ids]\n",
     "\n",
     "# Use a list comprehension to add \"subcat\" to each subcategory_id.    \n",
-    "\n",
+    "scat_ids = [f\"subcat{subcategory_id}\" for subcategory_id in subcategory_ids]\n",
     "    \n",
     "print(cat_ids)\n",
     "print(scat_ids)"
@@ -568,8 +574,12 @@
    "outputs": [],
    "source": [
     "# Create a category DataFrame with the category_id array as the category_id and categories list as the category name.\n",
+    "cat_dictionary = {'category_ids' : cat_ids , 'category' : categories}\n",
+    "category_df = pd.DataFrame(cat_dictionary)\n",
     "\n",
-    "# Create a category DataFrame with the subcategory_id array as the subcategory_id and subcategories list as the subcategory name. \n"
+    "# Create a category DataFrame with the subcategory_id array as the subcategory_id and subcategories list as the subcategory name. \n",
+    "subcat_dictionary = {'subcategory_ids' : scat_ids , 'subcategory' : subcategories}\n",
+    "subcategory_df = pd.DataFrame(subcat_dictionary)"
    ]
   },
   {
@@ -598,7 +608,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>category_id</th>\n",
+       "      <th>category_ids</th>\n",
        "      <th>category</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -653,16 +663,16 @@
        "</div>"
       ],
       "text/plain": [
-       "  category_id      category\n",
-       "0        cat1          food\n",
-       "1        cat2         music\n",
-       "2        cat3    technology\n",
-       "3        cat4       theater\n",
-       "4        cat5  film & video\n",
-       "5        cat6    publishing\n",
-       "6        cat7         games\n",
-       "7        cat8   photography\n",
-       "8        cat9    journalism"
+       "  category_ids      category\n",
+       "0         cat1          food\n",
+       "1         cat2         music\n",
+       "2         cat3    technology\n",
+       "3         cat4       theater\n",
+       "4         cat5  film & video\n",
+       "5         cat6    publishing\n",
+       "6         cat7         games\n",
+       "7         cat8   photography\n",
+       "8         cat9    journalism"
       ]
      },
      "execution_count": 11,
@@ -700,7 +710,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>subcategory_id</th>\n",
+       "      <th>subcategory_ids</th>\n",
        "      <th>subcategory</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -830,31 +840,31 @@
        "</div>"
       ],
       "text/plain": [
-       "   subcategory_id        subcategory\n",
-       "0         subcat1        food trucks\n",
-       "1         subcat2               rock\n",
-       "2         subcat3                web\n",
-       "3         subcat4              plays\n",
-       "4         subcat5        documentary\n",
-       "5         subcat6     electric music\n",
-       "6         subcat7              drama\n",
-       "7         subcat8         indie rock\n",
-       "8         subcat9          wearables\n",
-       "9        subcat10         nonfiction\n",
-       "10       subcat11          animation\n",
-       "11       subcat12        video games\n",
-       "12       subcat13             shorts\n",
-       "13       subcat14            fiction\n",
-       "14       subcat15  photography books\n",
-       "15       subcat16   radio & podcasts\n",
-       "16       subcat17              metal\n",
-       "17       subcat18               jazz\n",
-       "18       subcat19       translations\n",
-       "19       subcat20         television\n",
-       "20       subcat21       mobile games\n",
-       "21       subcat22        world music\n",
-       "22       subcat23    science fiction\n",
-       "23       subcat24              audio"
+       "   subcategory_ids        subcategory\n",
+       "0          subcat1        food trucks\n",
+       "1          subcat2               rock\n",
+       "2          subcat3                web\n",
+       "3          subcat4              plays\n",
+       "4          subcat5        documentary\n",
+       "5          subcat6     electric music\n",
+       "6          subcat7              drama\n",
+       "7          subcat8         indie rock\n",
+       "8          subcat9          wearables\n",
+       "9         subcat10         nonfiction\n",
+       "10        subcat11          animation\n",
+       "11        subcat12        video games\n",
+       "12        subcat13             shorts\n",
+       "13        subcat14            fiction\n",
+       "14        subcat15  photography books\n",
+       "15        subcat16   radio & podcasts\n",
+       "16        subcat17              metal\n",
+       "17        subcat18               jazz\n",
+       "18        subcat19       translations\n",
+       "19        subcat20         television\n",
+       "20        subcat21       mobile games\n",
+       "21        subcat22        world music\n",
+       "22        subcat23    science fiction\n",
+       "23        subcat24              audio"
       ]
      },
      "execution_count": 12,
@@ -3686,9 +3696,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "dev",
    "language": "python",
-   "name": "python3"
+   "name": "dev"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3700,7 +3710,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
